--- a/_includes/carry_culture_cta.html
+++ b/_includes/carry_culture_cta.html
@@ -1,31 +1,8 @@
-<div class="page-cta">
-
-  <div class="container">
-
-    <div class="page-cta-hdr-wrapper ">
-      <div class="page-cta-hdr">
-        <h3 class="header-display-3">Become a culture carrier.</h3>
-      </div>
-    </div>
-
-    <div class="page-cta-content-wrapper">
-      <div class="page-cta-content">
-        <p>
-          Join our team of talented technologists working
-          together to cultivate an incredible culture.
-        </p>
-      </div>
-    </div>
-
-    <div class="page-cta-btn-wrapper">
-      <div class="page-cta-btn">
-        <a href="/join/" role="button">
-          <span>Join Skylight</span>
-          <i class="fa fa-arrow-right" aria-hidden="true"></i>
-        </a>
-      </div>
-    </div>
-
-  </div>
-
-</div>
+{% include cta.html
+  header = "Become a culture carrier."
+  content = "Join our team of talented technologists working together to cultivate an incredible culture."
+  content_css_class = "page-cta-content"
+  cta_path = "/join/"
+  cta = "Join Skylight"
+  icon_css_class = "fa fa-arrow-right"
+%}
