--- a/_sass/pages/_common.scss
+++ b/_sass/pages/_common.scss
@@ -102,14 +102,8 @@
 
 .text {
   a {
-    color: $text-link-color;
-    border-bottom: 1px dotted $text-link-decoration-color;
-
-    &:hover,
-    &:focus {
-      color: $text-link-hover-color;
-      border-bottom: 1px solid $text-link-decoration-hover-color;
-    }
+    @include link-decoration($text-link-color, $text-link-hover-color,
+      $text-link-border, $text-link-border-hover);
   }
 }
 
