use aria-current attribute to indicate current page or location instead of using class...added autocomplete attributes to forms

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -15,7 +15,7 @@
         <a href="/services/"><span>Services</span></a>
         <a href="/work/"><span>Work</span></a>
         <a href="/culture/"><span>Culture</span></a>
-        <a href="/join/"><span>Join Us</span></a>
+        <a href="/join/" aria-current="page"><span>Join Us</span></a>
         <a href="/blog/"><span>Blog</span></a>
         <a href="/hire-us/"><span>Hire Us</span></a>
       </div>
