--- a/_sass/pages/_join.scss
+++ b/_sass/pages/_join.scss
@@ -23,12 +23,12 @@
       @extend .mb-2;
     }
 
-    padding-left: 0.5em;
+    padding-left: 0.5rem;
     border-left: 7px solid $white;
 
     &:hover,
     &:focus,
-    &[aria-current] {
+    &.current {
       border-left: 7px solid $nav-link-border-color;
     }
   }
