--- a/_sass/_forms.scss
+++ b/_sass/_forms.scss
@@ -58,12 +58,13 @@ form {
     @extend .d-flex;
     @extend .justify-content-between;
     @extend .mt-2;
+    border-bottom: 1px dashed $form-icons-border-color;
     margin-bottom: $form-icons-margin-bottom;
-    border-bottom: 1px dashed $gray-lightest;
   }
 
   i {
     @extend .pb-2;
+    color: $form-icon-color;
 
     &:hover,
     &:focus,
