solution for dealing with sticky hover effects on mobile devices

--- a/_sass/_forms.scss
+++ b/_sass/_forms.scss
@@ -73,3 +73,14 @@ form {
     }
   }
 }
+
+.can-touch .form-icons i {
+  &:hover {
+    color: $form-icon-color;
+  }
+
+  &:focus,
+  &.current {
+    color: $form-icon-hover-color;
+  }
+}
