finished project case study page

--- a/_includes/page_header.html
+++ b/_includes/page_header.html
@@ -1,23 +1,29 @@
-{% if page.header_css_class == nil %}
-  {% assign header_css_class = 'page-hdr-2' %}
-{% else %}
+{% if page.header_css_class %}
   {% assign header_css_class = page.header_css_class %}
+{% else %}
+  {% assign header_css_class = 'page-hdr-2' %}
 {% endif %}
 
-<section class="{{ header_css_class }}">
+{% if page.header_title %}
+  {% assign header_title = page.header_title %}
+{% else %}
+  {% assign header_title = page.title %}
+{% endif %}
 
-  {% if page.header_title %}
-    {% assign header_title = page.header_title %}
-  {% else %}
-    {% assign header_title = page.title %}
-  {% endif %}
+{% if page.subtitle %}
+  {% assign header_content = page.subtitle %}
+{% else %}
+  {% assign header_content = page.header_content %}
+{% endif %}
+
+<header class="{{ header_css_class }}">
 
   <h1>{{ header_title }}</h1>
 
-  {% if page.header_content_css_class != nil and page.header_content != nil %}
+  {% if page.header_content_css_class and header_content %}
     <div class="row">
       <div class="{{ page.header_content_css_class }}">
-        <p>{{ page.header_content }}</p>
+        <p>{{ header_content }}</p>
 
         {% if page.header_content_img_path %}
           <img src="{{ page.header_content_img_path }}" alt="{{ page.header_content_img_description }}" />
@@ -25,4 +31,4 @@
       </div>
     </div>
   {% endif %}
-</section>
+</header>
