--- a/_sass/pages/_manifest.scss
+++ b/_sass/pages/_manifest.scss
@@ -4,6 +4,7 @@
 @import "services";
 @import "service_area";
 @import "work";
+@import "project";
 @import "culture";
 @import "policies";
 @import "policy";
