--- a/css/main.scss
+++ b/css/main.scss
@@ -11,5 +11,7 @@
 @import "spacing";
 @import "type";
 @import "forms";
+@import "buttons";
+@import "tables";
 @import "layout/manifest";
 @import "pages/manifest";
