--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -276,7 +276,7 @@ $page-cta-bg-color: $brand-primary;
 
 // Project case studies
 $project-aside-link-color: $body-color;
-$project-aside-link-hover-color: $brand-primary;
+$project-aside-link-hover-color: $body-color;
 $project-aside-link-border: 1px dotted $project-aside-link-color;
 $project-aside-link-border-hover: 1px solid $project-aside-link-hover-color;
 
