change design of industry info items...misc fixes...add/update social media links

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -19,23 +19,23 @@
 
     <div class="footer-contribute-cta-wrapper">
       <div class="footer-contribute-cta">
-        <a href="{{ site.github_issues_url }}" role="button" target="_blank">
+        <a href="{{site.github_issues_url}}" role="button" target="_blank">
           Contribute to this site
         </a>
       </div>
 
       <div class="footer-socials">
-        <a href="{{ site.twitter_url }}" target="_blank">
+        <a href="{{site.twitter_url}}" target="_blank">
           <i class="fa fa-2x fa-twitter" aria-hidden="true" title="Twitter"></i>
           <span>Twitter</span>
         </a>
 
-        <a href="{{ site.linkedin_url }}" target="_blank">
+        <a href="{{site.linkedin_url}}" target="_blank">
           <i class="fa fa-2x fa-linkedin" aria-hidden="true" title="LinkedIn"></i>
           <span>LinkedIn</span>
         </a>
 
-        <a href="{{ site.github_url }}" target="_blank">
+        <a href="{{site.github_repo_url}}" target="_blank">
           <i class="fa fa-2x fa-github" aria-hidden="true" title="GitHub"></i>
           <span>GitHub</span>
         </a>
