add linkedin profile url

--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -242,7 +242,7 @@ $control-label-color: $body-color;
 $control-label-font-size: $font-size-base;
 
 $help-text-link-color: $text-muted;
-$help-text-link-hover-color: $brand-primary;
+$help-text-link-hover-color: $text-muted;
 $help-text-link-border: 1px dotted $help-text-link-color;
 $help-text-link-border-hover: 1px solid $help-text-link-hover-color;
 
