--- a/_includes/project_list.html
+++ b/_includes/project_list.html
@@ -1,13 +1,27 @@
 <div class="container">
-  <div class="projects">
-    {% for project in projects | limit: include.limit %}
+
+  {% assign limit = include.limit %}
+
+  {% if limit %}
+    {% assign collection_size = limit %}
+  {% else %}
+    {% assign collection_size = projects.size %}
+  {% endif %}
+
+  {% include hanging_column_size.html
+    collection_size = collection_size
+    col_size = 3
+  %}
+
+  <div class="projects {{hanging_col_size_css_class}}">
+    {% for project in projects | limit: limit %}
       <article class="project">
-        <a href="{{ project.permalink }}">
+        <a href="{{project.permalink}}">
           <div class="project-card">
-            <img class="project-img" src="{{ project.img_icon_path }}" alt="{{ project.img_icon_description }}">
+            <img class="project-img" src="{{project.img_icon_path}}" alt="{{project.img_icon_description}}">
             <div class="project-block">
-              <h3 class="project-title">{{ project.title }}</h3>
-              <p class="project-text">{{ project.excerpt }}</p>
+              <h3 class="project-title">{{project.title}}</h3>
+              <p class="project-text">{{project.excerpt}}</p>
             </div>
             <div class="project-footer">
               <span>Learn more</span>
