forgot to include liquid var tag

--- a/_includes/project_showcase.html
+++ b/_includes/project_showcase.html
@@ -38,7 +38,7 @@
 
       <div class="row">
         <div class="col">
-          <a class="btn-page" href="page.project_url" role="button">Visit the site</a>
+          <a class="btn-page" href="{{page.project_url}}" role="button">Visit the site</a>
         </div>
       </div>
     </div>
