--- a/_sass/_mixins.scss
+++ b/_sass/_mixins.scss
@@ -32,6 +32,8 @@
 @mixin mb-7 { margin-bottom: 5rem !important; }
 @mixin mb-10 { margin-bottom: 8rem !important; }
 
+@mixin ml-3 { margin-left: 1rem !important; }
+
 @mixin pt-6 { padding-top: 4rem !important; }
 
 @mixin pb-6 { padding-bottom: 4rem !important; }
